--- a/index.html
+++ b/index.html
@@ -130,33 +130,38 @@
                                 <div class="menu-wrap">
                                     <ul>
                                         <li><a href="#">FOR HIM</a></li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
+                                        <li>All Men's Fragrances</li>
+                                        <li>Aventus Cologne</li>
+                                        <li>Viking Cologne</li>
+                                        <li>Green Irish Tweed</li>
+                                        <li>Silver Mountain Water</li>
+                                        <li>Royal Oud</li>
                                     </ul>
                                     <ul>
-                                        <li><a href="#">FOR HIM</a></li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
+                                        <li><a href="#">FOR HER</a></li>
+                                        <li>All Women's Fragrances</li>
+                                        <li>Wind Flowers</li>
+                                        <li>Aventus For Her</li>
+                                        <li>Love In White</li>
+                                        <li>Royal Princess Oud</li>
+                                        <li>Spring Flower</li>
+                                        <li>Acqua Fiorentina</li>
                                     </ul>
                                     <ul>
-                                        <li><a href="#">FOR HIM</a></li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
+                                        <li><a href="#">COLLECTIONS</a></li>
+                                        <li>Aventus Collection</li>
+                                        <li>Les Royales Exclusives</li>
+                                        <li>Acqua Originale</li>
+                                        <li>The Explorer Collection</li>
+                                    </ul>
+                                    <ul>
+                                        <li><a href="#">BE INSPIRED</a></li>
+                                        <li>Sample Sets</li>
+                                        <li>Discovery Sets</li>
+                                        <li>Personalised Services</li>
+                                        <li>Fragrance Finder</li>
+                                        <li>Bespoke Shopping</li>
+                                        <li>Spring Fragrances</li>
                                     </ul>
                                     <ul>
                                         <li>
@@ -171,23 +176,38 @@
                                 <div class="menu-wrap">
                                     <ul>
                                         <li><a href="#">FOR HIM</a></li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
+                                        <li>All Men's Fragrances</li>
+                                        <li>Aventus Cologne</li>
+                                        <li>Viking Cologne</li>
+                                        <li>Green Irish Tweed</li>
+                                        <li>Silver Mountain Water</li>
+                                        <li>Royal Oud</li>
                                     </ul>
                                     <ul>
-                                        <li><a href="#">FOR HIM</a></li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
+                                        <li><a href="#">FOR HER</a></li>
+                                        <li>All Women's Fragrances</li>
+                                        <li>Wind Flowers</li>
+                                        <li>Aventus For Her</li>
+                                        <li>Love In White</li>
+                                        <li>Royal Princess Oud</li>
+                                        <li>Spring Flower</li>
+                                        <li>Acqua Fiorentina</li>
+                                    </ul>
+                                    <ul>
+                                        <li><a href="#">COLLECTIONS</a></li>
+                                        <li>Aventus Collection</li>
+                                        <li>Les Royales Exclusives</li>
+                                        <li>Acqua Originale</li>
+                                        <li>The Explorer Collection</li>
+                                    </ul>
+                                    <ul>
+                                        <li><a href="#">BE INSPIRED</a></li>
+                                        <li>Sample Sets</li>
+                                        <li>Discovery Sets</li>
+                                        <li>Personalised Services</li>
+                                        <li>Fragrance Finder</li>
+                                        <li>Bespoke Shopping</li>
+                                        <li>Spring Fragrances</li>
                                     </ul>
                                     <ul>
                                         <li>
@@ -202,33 +222,38 @@
                                 <div class="menu-wrap">
                                     <ul>
                                         <li><a href="#">FOR HIM</a></li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
+                                        <li>All Men's Fragrances</li>
+                                        <li>Aventus Cologne</li>
+                                        <li>Viking Cologne</li>
+                                        <li>Green Irish Tweed</li>
+                                        <li>Silver Mountain Water</li>
+                                        <li>Royal Oud</li>
                                     </ul>
                                     <ul>
-                                        <li><a href="#">FOR HIM</a></li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
+                                        <li><a href="#">FOR HER</a></li>
+                                        <li>All Women's Fragrances</li>
+                                        <li>Wind Flowers</li>
+                                        <li>Aventus For Her</li>
+                                        <li>Love In White</li>
+                                        <li>Royal Princess Oud</li>
+                                        <li>Spring Flower</li>
+                                        <li>Acqua Fiorentina</li>
                                     </ul>
                                     <ul>
-                                        <li><a href="#">FOR HIM</a></li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
+                                        <li><a href="#">COLLECTIONS</a></li>
+                                        <li>Aventus Collection</li>
+                                        <li>Les Royales Exclusives</li>
+                                        <li>Acqua Originale</li>
+                                        <li>The Explorer Collection</li>
+                                    </ul>
+                                    <ul>
+                                        <li><a href="#">BE INSPIRED</a></li>
+                                        <li>Sample Sets</li>
+                                        <li>Discovery Sets</li>
+                                        <li>Personalised Services</li>
+                                        <li>Fragrance Finder</li>
+                                        <li>Bespoke Shopping</li>
+                                        <li>Spring Fragrances</li>
                                     </ul>
                                     <ul>
                                         <li>
@@ -243,33 +268,38 @@
                                 <div class="menu-wrap">
                                     <ul>
                                         <li><a href="#">FOR HIM</a></li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
+                                        <li>All Men's Fragrances</li>
+                                        <li>Aventus Cologne</li>
+                                        <li>Viking Cologne</li>
+                                        <li>Green Irish Tweed</li>
+                                        <li>Silver Mountain Water</li>
+                                        <li>Royal Oud</li>
                                     </ul>
                                     <ul>
-                                        <li><a href="#">FOR HIM</a></li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
+                                        <li><a href="#">FOR HER</a></li>
+                                        <li>All Women's Fragrances</li>
+                                        <li>Wind Flowers</li>
+                                        <li>Aventus For Her</li>
+                                        <li>Love In White</li>
+                                        <li>Royal Princess Oud</li>
+                                        <li>Spring Flower</li>
+                                        <li>Acqua Fiorentina</li>
                                     </ul>
                                     <ul>
-                                        <li><a href="#">FOR HIM</a></li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
-                                        <li>AVENTUS</li>
+                                        <li><a href="#">COLLECTIONS</a></li>
+                                        <li>Aventus Collection</li>
+                                        <li>Les Royales Exclusives</li>
+                                        <li>Acqua Originale</li>
+                                        <li>The Explorer Collection</li>
+                                    </ul>
+                                    <ul>
+                                        <li><a href="#">BE INSPIRED</a></li>
+                                        <li>Sample Sets</li>
+                                        <li>Discovery Sets</li>
+                                        <li>Personalised Services</li>
+                                        <li>Fragrance Finder</li>
+                                        <li>Bespoke Shopping</li>
+                                        <li>Spring Fragrances</li>
                                     </ul>
                                     <ul>
                                         <li>
@@ -297,7 +327,7 @@
                     <div class="fav modal">
                         <div class="modal_body">
                             <a href="#" class="x-btn" onclick="return false;"></a>
-                            <input type="text" class="text-box" placeholder="FAVORITE">
+                            <input type="text" placeholder="FAVORITE">
                         </div>
                     </div>
                     <div class="acc modal">
@@ -431,14 +461,18 @@
                 <div class="inner">
                     <div class="ad-wrapper">
                         <div class="bg">
-                            <a href="#"><img src="images/SMW2.jpg"></a>
+                            <a href="#" onclick="return false"><img src="images/SMW2.jpg"></a>
                         </div>
-
+                        <div class="ad modal">
+                            <div class="modal_body">
+                                <a href="#" class="x-btn" onclick="return false;"></a>
+                            </div>
+                        </div>
                         <div class="text-box">
                             <span class="title">실버 마운틴 워터</span>
                             <p class="text">흥분되는 모험을 떠나다
                             </p>
-                            <a href="#" class="more">READ MORE</a>
+                            <a href="#" class="more" onclick="return false">READ MORE</a>
                         </div>
                     </div>
                 </div>
