--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
                 <div class="h-right">
                     <div class="search-box">
-                        <input type="text" maxlength="24" class="textBox" placeholder="검색하세요">
+                        <input type="text" maxlength="20" class="textBox" placeholder="검색하세요">
                         <a href="#" class="x-btn" onclick="return false;"></a>
                     </div>
                     <ul>
@@ -592,68 +592,70 @@
         <div class="scroll-top"></div>
     </main>
     <footer class="f-container">
-        <ul class="footer-menu">
-            <li class="item">
-                <span class="title">HELP</span>
-                <ul class="menu-list">
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Delivery & Returns</a></li>
-                    <li><a href="#">Track Your Order</a></li>
-                    <li><a href="#">FAQ's</a></li>
-                    <li><a href="#">Fragrance Finder</a></li>
-                    <li><a href="#">Online Benefits</a></li>
-                    <li><a href="#">Klarna FAQ's</a></li>
-                </ul>
-            </li>
-            <li class="item">
-                <span class="title">FIND A STORE</span>
-                <ul class="menu-list">
-                    <li><a href="#">Official Creed Boutique</a></li>
-                    <li><a href="#">Official Stockists</a></li>
-                </ul>
-            </li>
-            <li class="item">
-                <span class="title">ABOUT US</span>
-                <ul class="menu-list">
-                    <li><a href="#">Our Story</a></li>
-                    <li><a href="#">Our Ingredients</a></li>
-                    <li><a href="#">The Art Of Millesime</a></li>
-                    <li><a href="#">One Tree Planted</a></li>
-                    <li><a href="#">Fragrance For The Future</a></li>
-                    <li><a href="#">Work With Us</a></li>
-                </ul>
-            </li>
-            <li class="item">
-                <span class="title">LEGAL & PRIVACY</span>
-                <ul class="menu-list">
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">T&C's</a></li>
-                </ul>
-            </li>
-            <li class="item">
-                <span class="title">JOIN THE CREED MEMBERS' CLUB</span>
-                <ul class="menu-list">
-                    <li>Receive a special offer to use against your first order*</li>
-                    <div class="e-mail">
-                        <!-- <span class="text">
+        <div class="inner">
+            <ul class="footer-menu">
+                <li class="item">
+                    <span class="title">HELP</span>
+                    <ul class="menu-list">
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Delivery & Returns</a></li>
+                        <li><a href="#">Track Your Order</a></li>
+                        <li><a href="#">FAQ's</a></li>
+                        <li><a href="#">Fragrance Finder</a></li>
+                        <li><a href="#">Online Benefits</a></li>
+                        <li><a href="#">Klarna FAQ's</a></li>
+                    </ul>
+                </li>
+                <li class="item">
+                    <span class="title">FIND A STORE</span>
+                    <ul class="menu-list">
+                        <li><a href="#">Official Creed Boutique</a></li>
+                        <li><a href="#">Official Stockists</a></li>
+                    </ul>
+                </li>
+                <li class="item">
+                    <span class="title">ABOUT US</span>
+                    <ul class="menu-list">
+                        <li><a href="#">Our Story</a></li>
+                        <li><a href="#">Our Ingredients</a></li>
+                        <li><a href="#">The Art Of Millesime</a></li>
+                        <li><a href="#">One Tree Planted</a></li>
+                        <li><a href="#">Fragrance For The Future</a></li>
+                        <li><a href="#">Work With Us</a></li>
+                    </ul>
+                </li>
+                <li class="item">
+                    <span class="title">LEGAL & PRIVACY</span>
+                    <ul class="menu-list">
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">T&C's</a></li>
+                    </ul>
+                </li>
+                <li class="item">
+                    <span class="title">JOIN THE CREED MEMBERS' CLUB</span>
+                    <ul class="menu-list">
+                        <li>Receive a special offer to use against your first order*</li>
+                        <div class="e-mail">
+                            <!-- <span class="text">
                             ENTER YOUR E-MAIL ->
                         </span> -->
-                        <input type="text" placeholder="이메일을 입력하세요" class="inE">
-                    </div>
-                    <div class="sns">
-                        <ul>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                            <li><a href="#"></a></li>
-                        </ul>
-                    </div>
-                    <span class="copy-right">
-                        Copyright © Creed Fragrances 2022 Made by
-                        <!-- Tom&Co. -->
-                    </span>
-                </ul>
-            </li>
-        </ul>
+                            <input type="text" placeholder="이메일을 입력하세요" class="inE">
+                        </div>
+                        <div class="sns">
+                            <ul>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
+                                <li><a href="#"></a></li>
+                            </ul>
+                        </div>
+                        <span class="copy-right">
+                            Copyright © Creed Fragrances 2022 Made by
+                            <!-- Tom&Co. -->
+                        </span>
+                    </ul>
+                </li>
+            </ul>
+        </div>
     </footer>
 </body>
 
